# area-selector-accessibility-app

./: Cargo.toml  README.md  area-selector-context-0.2.txt
src/: app.rs  capture.rs  config.rs  lib.rs  lupa.rs  main.rs  model.rs  ui_selector.rs
